@@ -402,6 +402,9 @@ _mbsupr
 _memccpy
 _memicmp
 _mkdir
+_mkgmtime
+_mkgmtime32 = _mkgmtime
+_mkgmtime64
 _mktemp
 _msize
 _nextafter
@@ -559,6 +562,7 @@ getchar
 getenv
 gets
 gmtime
+_gmtime32 = gmtime
 is_wctype
 isalnum
 isalpha
@@ -590,6 +594,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 = localtime
 log
 log10
 longjmp
