@@ -570,6 +570,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 = gmtime
 is_wctype
 isalnum
 isalpha
@@ -601,6 +602,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 = localtime
 log
 log10
 longjmp
@@ -720,6 +722,9 @@ _ftime64
 _futime64
 _gmtime64
 _localtime64
+_mkgmtime
+_mkgmtime32 = _mkgmtime
+_mkgmtime64
 _mbcasemap
 _mktime64
 _osplatform	DATA
